Update rpsec to 3.x syntax, use TED code-style-guides
@alexdean I'd appreciate half an eyeball sanity check if you get a chance.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,1 +1,6 @@
-inherit_from: .rubocop_todo.yml
+AllCops:
+  TargetRubyVersion: 2.5
+
+inherit_from:
+  - https://raw.githubusercontent.com/tedconf/code-style-guides/rubocop_latest/linters/rubocop/rubocop.yml
+  - .rubocop_todo.yml
